css path changed

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
       src="https://kit.fontawesome.com/806b9e6cbd.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/logi.github.io/css/style.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width:768px)"
-      href="/css/mobile.css"
+      href="/logi.github.io/css/mobile.css"
     />
     <link
       rel="stylesheet"
       media="screen and (min-width:768px) and (max-width:1100px)"
-      href="/css/widescreen.css"
+      href="/logi.github.io/css/widescreen.css"
     />
   </head>
   <body id="home">
@@ -176,7 +176,7 @@
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"
     ></script>
-    <script src="/js/index.js"></script>
+    <script src="/logi.github.io/js/index.js"></script>
     <script
       async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpN3hUme6BrpbuEYnPLk3ayS5tbap4Frg&callback=initMap"
