--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       src="https://kit.fontawesome.com/806b9e6cbd.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+
     <link
       rel="stylesheet"
       media="screen and (max-width:768px)"
